# Fast-API

backend/: alembic.ini  pyproject.toml
backend/backend/: main.py
backend/backend/blog/: main.py  models.py  oauth2.py  schemas.py  service.py  token.py
backend/backend/blog/routers/: auth.py  blog.py  user.py
backend/backend/core/: base.py  database.py
