[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Michail Gurbanov <54814200+reqww@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
SQLAlchemy = "^1.4.18"
psycopg2 = "^2.8.6"
alembic = "^1.6.5"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"
ipython = "^7.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79